k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudstorage-api-svc
  namespace: cloud-storage
spec:
  type: ClusterIP
  selector:
    app: cloudstorage-api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
